--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ html,body{
     font-size: 2.2rem;
 }
 
-.block1-title-behtar{
+.block1-title-text{
     border-bottom: 0.1rem solid #007B5A;
 }
 
@@ -73,6 +73,58 @@ html,body{
 
 .block1-wave{
     opacity: 0.5;
+}
+
+.block2-left-text{
+    width: 30%;
+}
+
+.block2-list-center{
+    width: 40%;
+    height: 100%;
+}
+
+.block2-img-right{
+    width: 30%;
+    height: 41rem;
+}
+
+.block2-title-text{
+    color: #007B5A;
+    font-size: 1.6rem;
+}
+
+
+
+.block2-text{
+    text-align: justify;
+    text-justify: auto;
+}
+
+.block2-list-line{
+    position: absolute;
+    width: 0.1rem;
+    height: 43rem;
+    border-left: 0.2rem solid #007B5A;
+}
+
+.img-list-line{
+    opacity: 0;
+}
+
+.block2-list-img{
+    width: 5rem;
+    height: 5rem;
+    padding: 0.8rem;
+    border-radius: 50%;
+    border: 0.1rem solid #007B5A;
+    margin-bottom: 15%;
+    fill: #007B5A;
+}
+
+
+.list-image{
+    fill: #007B5A;
 }
 
 @media only screen and (min-width: 992px) {
@@ -119,5 +171,49 @@ html,body{
 
     .block1-left-img{
         width: 20rem;
+    }
+
+    .block2-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between !important;
+        padding: 0;
+        margin-left: 0;
+        }
+
+    .block2-list-center{
+        order: 1;
+        display: flex;
+        flex-direction: row !important;
+        justify-content: space-around !important;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        padding-top: 0.5rem;
+    }
+
+    .block2-img-right{
+        order: 2;
+        width: 100%;
+    }
+
+    .block2-left-text{
+        padding-top: 5rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        order: 3;
+        width: 100%;
+        text-align: center;
+    }
+
+    .block2-list-img{
+        width: 3rem;
+        height: 3rem;
+        margin: 0 !important;
+
+    }
+
+    .block2-text{
+        text-align: center;
     }
   }
